--- a/index.css
+++ b/index.css
@@ -5,8 +5,12 @@
 a {
     text-decoration: none;
 }
+.w {
+    width: 1100px;
+    margin: auto;
+}
 .top {
-    width: 1710px;
+    /* width: 1710px; */
     height: 40px;
 background-color:#2288b6;
 }
@@ -17,7 +21,7 @@ background-color:#2288b6;
 }
 
 .men {
-    width: 1710px;
+    /* width: 1710px; */
     height: 80px;
     /* border: 1px solid black; */
 }
@@ -45,7 +49,7 @@ background-color:#2288b6;
 
 
 .top-three {
-    width: 1710px;
+    /* width: 1710px; */
     height: 400px;
     /* border: 1px solid black; */
     background-color: #2288b6;
@@ -98,7 +102,7 @@ background-color:#2288b6;
   font-size: 40px;
 }
 .hero {
-    width:1710px;
+    /* width:1710px; */
     height: 136px;
     background-color: #2288b6;
 
@@ -130,7 +134,7 @@ background-color:#2288b6;
 }
 
 .bottom {
-    width: 1710px;
+    /* width: 1710px; */
     height: 400px;
     margin: auto;
 }
@@ -174,7 +178,7 @@ background-color:#2288b6;
 
 }
 .bottom-b {
-    width: 1710px;
+    /* width: 1710px; */
     height: 200px;
 
     margin: auto;
